Attributes are now set via helpers, not in the `onRendered` callback

--- a/aframe-blaze/client/core/aAnimation.html
+++ b/aframe-blaze/client/core/aAnimation.html
@@ -1,5 +1,5 @@
 <template name="_aAnimation">
-  <a-animation>
+  <a-animation {{attributes}}>
     {{> UI.contentBlock}}
   </a-animation>
 </template>
