--- a/aframe-blaze/client/core/aEntity.html
+++ b/aframe-blaze/client/core/aEntity.html
@@ -1,5 +1,5 @@
 <template name="_aEntity">
-  <a-entity id={{id}}>
+  <a-entity {{attributes}}>
     {{> UI.contentBlock}}
   </a-entity>
 </template>
