--- a/aframe-blaze/client/core/aMixin.html
+++ b/aframe-blaze/client/core/aMixin.html
@@ -1,7 +1,5 @@
 <template name="_aMixin">
-  <a-mixin id={{id}}>
-  {{material}}
-
+  <a-mixin {{attributes}}>
     {{> UI.contentBlock}}
   </a-mixin>
 </template>
