--- a/aframe-blaze/client/primitives/aCurvedimage.html
+++ b/aframe-blaze/client/primitives/aCurvedimage.html
@@ -1,5 +1,5 @@
 <template name="_aCurvedimage">
-  <a-curvedimage>
+  <a-curvedimage {{attributes}}>
     {{> UI.contentBlock}}
   </a-curvedimage>
 </template>
