--- a/aframe-blaze/client/primitives/aCylinder.html
+++ b/aframe-blaze/client/primitives/aCylinder.html
@@ -1,5 +1,5 @@
 <template name="_aCylinder">
-  <a-cylinder>
+  <a-cylinder {{attributes}}>
     {{> UI.contentBlock}}
   </a-cylinder>
 </template>
