--- a/aframe-blaze/client/primitives/aVideosphere.html
+++ b/aframe-blaze/client/primitives/aVideosphere.html
@@ -1,5 +1,5 @@
 <template name="_aVideosphere">
-  <a-videosphere>
+  <a-videosphere {{attributes}}>
     {{> UI.contentBlock}}
   </a-videosphere>
 </template>
