Remove button glow animation

--- a/examples/flickrJump/flickrJump.html
+++ b/examples/flickrJump/flickrJump.html
@@ -12,10 +12,7 @@
       {{#aAnimation buttonScale "mouseleave"}}{{/aAnimation}}
     {{/aSphere}}
 
-    {{#aImage buttonGlow}}
-      {{#aAnimation buttonGlowScale "mouseenter"}}{{/aAnimation}}
-      {{#aAnimation buttonGlowScale "mouseleave"}}{{/aAnimation}}
-    {{/aImage}}
+    {{#aImage buttonGlow}}{{/aImage}}
 
     {{#aSky flickrSky}}{{/aSky}}
 
