Replaced rawgit.com (eol) with combinatronics.com (drop in replacement).

--- a/examples/flickrJump/flickrJump.html
+++ b/examples/flickrJump/flickrJump.html
@@ -1,5 +1,5 @@
 <head>
-  <script src="https://cdn.rawgit.com/Pomax/node-flickrapi/master/browser/flickrapi.dev.js"></script>
+  <script src="https://cdn.combinatronics.com/Pomax/node-flickrapi/master/browser/flickrapi.dev.js"></script>
 </head>
 <template name="FlickrJump">
   {{#aScene}}
